# neural-network-examples-rs

./: .gitignore  CLAUDE.md  Cargo.toml  FFN.cpp  FFN.hpp  Header.h  LICENSE  Layer.cpp  Layer.hpp  README.md  TA.txt  TT.txt  graphic_f.cpp  main.cpp
.github/workflows/: ci.yml
checkpoints/: and_initial.json  and_trained.json  or_initial.json  or_trained.json  xor_initial.json  xor_manual_attempt1.json  xor_manual_attempt2.json  xor_trained.json
crates/neural-net-animator/: Cargo.toml  PHASE2_STATUS.md  README.md
crates/neural-net-animator/src/: generator.rs  lib.rs  script.rs  timeline.rs
crates/neural-net-animator/src/server/: mod.rs
crates/neural-net-animator/web/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/neural-net-animator/web/src/: lib.rs
crates/neural-net-animator/web/src/components/: animation_player.rs  app.rs  dvr_controls.rs  info_panel.rs  metrics_panel.rs  mod.rs  network_canvas.rs  timeline.rs
crates/neural-net-core/: Cargo.toml
crates/neural-net-core/src/: activation.rs  backward.rs  error.rs  forward.rs  layer.rs  lib.rs  network.rs  optimizer.rs  persistence.rs
crates/neural-net-core/src/utils/: file_io.rs
crates/neural-net-types/: Cargo.toml
crates/neural-net-types/src/: layer.rs  lib.rs  metadata.rs  network.rs
crates/neural-net-viz/: Cargo.toml
crates/neural-net-viz/src/: lib.rs
docs/: PRD.md  architecture.md  incremental-learning-path.md  index.html  layer-1a-completion-roadmap.md  learnings.md  multi-path-architecture.md  multi-repo-strategy.md  neural-net-animator-web-8e3aacc9f7cbe292.js  neural-net-animator-web-8e3aacc9f7cbe292_bg.wasm  neural-net-animator-web-b5fff25ad598604c.js  neural-net-animator-web-b5fff25ad598604c_bg.wasm  neural-net-animator-web-bacd6898b43c28f7.js  neural-net-animator-web-bacd6898b43c28f7_bg.wasm  plan.md  research-summary-2024-2025.md
docs/scripts/: xor_animation.json
documentation/: PRD.md  ROADMAP.md  history.md  layer-1-completion-roadmap.md  layer-1a-completion-roadmap.md  plan.md  process.md
examples/and/: Cargo.toml
examples/and/src/: main.rs
examples/example-1-forward-propagation/: Cargo.toml  README.md
examples/example-1-forward-propagation/checkpoints/: xor_initial.json  xor_manual_attempt1.json  xor_manual_attempt2.json
examples/example-1-forward-propagation/src/: main.rs
examples/example-2-backward-propagation-and/: Cargo.toml  README.md
examples/example-2-backward-propagation-and/checkpoints/: and_initial.json  and_trained.json
examples/example-2-backward-propagation-and/src/: main.rs
examples/example-2-backward-propagation-or/: Cargo.toml  README.md
examples/example-2-backward-propagation-or/checkpoints/: or_initial.json  or_trained.json
examples/example-2-backward-propagation-or/src/: main.rs
examples/example-2-backward-propagation-xor/: Cargo.toml  README.md
examples/example-2-backward-propagation-xor/checkpoints/: xor_initial.json  xor_trained.json
examples/example-2-backward-propagation-xor/src/: main.rs
examples/example-3-complex-boolean-majority-3/: Cargo.toml  README.md
examples/example-3-complex-boolean-majority-3/checkpoints/: majority3_initial.json  majority3_trained.json
examples/example-3-complex-boolean-majority-3/src/: main.rs
examples/example-3-complex-boolean-parity-3bit/: Cargo.toml  README.md
examples/example-3-complex-boolean-parity-3bit/checkpoints/: parity3_initial.json  parity3_trained.json
examples/example-3-complex-boolean-parity-3bit/src/: main.rs
examples/example-3-multi-output-full-adder/: Cargo.toml  README.md
examples/example-3-multi-output-full-adder/checkpoints/: full_adder_initial.json  full_adder_trained.json
examples/example-3-multi-output-full-adder/src/: main.rs
examples/example-3-multi-output-half-adder/: Cargo.toml  README.md
examples/example-3-multi-output-half-adder/checkpoints/: half_adder_initial.json  half_adder_trained.json
examples/example-3-multi-output-half-adder/src/: main.rs
examples/example-4-modern-optimizers/: Cargo.toml  README.md
examples/example-4-modern-optimizers/checkpoints/: parity3_adam_initial.json  parity3_adam_trained.json
examples/example-4-modern-optimizers/src/: main.rs
examples/example-5-modern-activations/: Cargo.toml  README.md
examples/example-5-modern-activations/checkpoints/: xor_sigmoid_initial.json  xor_sigmoid_trained.json
examples/example-5-modern-activations/src/: main.rs
examples/forward-propagation/: Cargo.toml
examples/forward-propagation/checkpoints/: xor_initial.json  xor_manual_attempt1.json  xor_manual_attempt2.json
examples/forward-propagation/src/: main.rs
examples/or/: Cargo.toml
examples/xor/: Cargo.toml
examples/xor/src/: main.rs
research/: README-cpp-original.md
research/cpp-original/: FFN.cpp  FFN.hpp  Header.h  Layer.cpp  Layer.hpp  README.md  main.cpp  utility_f.hpp
samples/: Xapp.txt  Xtest.txt  graphic_f.cpp  graphic_f.hpp  utility_f.cpp
scripts/: build-demo.sh  serve-demo.sh
src/: activation.rs  error.rs  layer.rs  lib.rs  network.rs
src/utils/: file_io.rs  mod.rs
tests/: markdown_ascii_test.rs
wiki/: Architecture-Overview.md  Core-Components.md  Data-Flow.md  Home.md  README.md  Training-Algorithms.md  _Sidebar.md
