[workspace]
resolver = "2"
members = [
    "crates/neural-net-core",
    "examples/forward-propagation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike <mike@softwarewrighter.com>"]
license = "MIT"
repository = "https://github.com/softwarewrighter/neural-network-examples-rs"

[workspace.dependencies]
# Shared dependencies across all crates
ndarray = "0.15"
rand = "0.8"
thiserror = "1.0"

# Development dependencies
approx = "0.5"
criterion = "0.5"
