[workspace]
resolver = "2"
members = [
    "crates/neural-net-types",
    "crates/neural-net-core",
    "crates/neural-net-viz",
    "examples/forward-propagation",
    "examples/and",
    "examples/or",
    "examples/xor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike <mike@softwarewrighter.com>"]
license = "MIT"
repository = "https://github.com/softwarewrighter/neural-network-examples-rs"

[workspace.dependencies]
# Shared dependencies across all crates
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Development dependencies
approx = "0.5"
criterion = "0.5"
