[workspace]
resolver = "2"
members = [
    "crates/neural-net-types",
    "crates/neural-net-core",
    "crates/neural-net-viz",
    "crates/neural-net-animator",
    "crates/neural-net-animator/web",
    "examples/example-1-forward-propagation",
    "examples/example-2-backward-propagation-and",
    "examples/example-2-backward-propagation-or",
    "examples/example-2-backward-propagation-xor",
    "examples/example-3-complex-boolean-parity-3bit",
    "examples/example-3-complex-boolean-majority-3",
    "examples/example-3-multi-output-half-adder",
    "examples/example-3-multi-output-full-adder",
    "examples/example-4-modern-optimizers",
    "examples/example-5-modern-activations",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike <mike@softwarewrighter.com>"]
license = "MIT"
repository = "https://github.com/softwarewrighter/neural-network-examples-rs"

[workspace.dependencies]
# Shared dependencies across all crates
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Development dependencies
approx = "0.5"
criterion = "0.5"
