[package]
name = "neural-net-animator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
neural-net-core = { path = "../neural-net-core" }
neural-net-types = { path = "../neural-net-types" }
neural-net-viz = { path = "../neural-net-viz" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "neural-net-animator"
path = "src/bin/main.rs"
