[package]
name = "neural-net-animator"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:tracing-subscriber", "dep:clap"]

[dependencies]
# Core dependencies (always included)
neural-net-core = { path = "../neural-net-core" }
neural-net-types = { path = "../neural-net-types" }
neural-net-viz = { path = "../neural-net-viz" }

# Serialization (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities (always included)
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Web server (optional, only for server feature)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI (optional, only for server feature)
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "neural-net-animator"
path = "src/bin/main.rs"
