[package]
name = "neural-net-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data structures and algorithms for neural network examples (from-scratch implementation)"
keywords = ["neural-network", "machine-learning", "educational"]
categories = ["algorithms", "science"]

[dependencies]
ndarray.workspace = true
rand.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
approx.workspace = true
