[package]
name = "neural-net-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network algorithms (forward/backward propagation, training) - depends on neural-net-types for data structures"
keywords = ["neural-network", "machine-learning", "educational", "backpropagation"]
categories = ["algorithms", "science"]

[dependencies]
neural-net-types = { path = "../neural-net-types" }
ndarray.workspace = true

[dev-dependencies]
approx.workspace = true
