[package]
name = "neural-net-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data structures and types for neural network examples (pure data, no algorithms)"

[dependencies]
ndarray.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
