[package]
name = "neural-net-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Visualization library for neural networks - SVG rendering, training curves, and educational diagrams (depends on neural-net-types for data structures)"
keywords = ["neural-network", "visualization", "svg", "educational"]
categories = ["visualization", "science"]

[dependencies]
neural-net-types = { path = "../neural-net-types" }

[dev-dependencies]
approx.workspace = true
