[package]
name = "example-3-complex-boolean-majority-3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
neural-net-core = { path = "../../crates/neural-net-core" }
neural-net-viz = { path = "../../crates/neural-net-viz" }
