[package]
name = "neural-net-animator-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Event",
    "EventTarget",
] }

# Utilities
gloo-timers = "0.3"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Local dependencies
neural-net-animator = { path = ".." }
neural-net-core = { path = "../../neural-net-core" }
neural-net-types = { path = "../../neural-net-types" }
neural-net-viz = { path = "../../neural-net-viz" }
